[package]
name = "sidefuzz"
version = "0.1.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
readme = "README-crates-io.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phayes/sidefuzz"
description = "Fuzzer to automatically find side-channel (timing) vulnerabilities"
keywords = ["fuzzing", "constant-time", "cryptography", "wasm"]
categories = ["cryptography", "testing"]

[dependencies]
lazy_static = "1.3.0"